--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6ce77158",
+   "id": "5bc7c6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "805361d0",
+   "id": "043babf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "af5ae993",
+   "id": "975bc61d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "17144ebe",
+   "id": "fba2b492",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "32758da5",
+   "id": "ee7e81d5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a92c3969",
+   "id": "d7c2cbd4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e25eaaa",
+   "id": "22f9a194",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6c27dffc",
+   "id": "8b18321a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bce8e6c",
+   "id": "1b25f2cf",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d5b40b8",
+   "id": "8a6d8f61",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_acs_pubcov'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f22d7a79",
+   "id": "6dfc0c3c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1b774f9d",
+   "id": "6d9f0493",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5e3545c1",
+   "id": "b3e8c641",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "80f3b639",
+   "id": "4f1e4b54",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  c36d3f62-2edd-4df4-97db-a9c3cb5be8ed\n"
+      "Current session uuid:  ac38ec40-c789-4f7e-91be-9ffb55bc3e6f\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed',\n",
+    "    'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3abba640",
+   "id": "02cc8806",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "be3372ad",
+   "id": "23b2ab95",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "03e98050",
+   "id": "297b8eef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873f8c32",
+   "id": "a93e6473",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "381430c4",
+   "id": "ab588277",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dc536c1a",
+   "id": "b87dd16a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "212fbff2",
+   "id": "b9b845f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33d75fb0",
+   "id": "b762c1d9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:40:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -571,9 +571,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -581,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c20f7610cd864e8d82500e50df34c169",
+       "model_id": "13d455164f314e328d9b26d03b599e03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -593,10 +593,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:40:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -604,8 +611,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -632,8 +637,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:05:21: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:08:18: Tuning for MLPClassifier is finished [F1 score = 0.664408522621062, Accuracy = 0.7095111111111111]\n",
+      "2024/01/06, 17:40:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 17:43:06: Tuning for MLPClassifier is finished [F1 score = 0.6632309503633372, Accuracy = 0.7084444444444444]\n",
       "\n"
      ]
     },
@@ -641,14 +646,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:08:18 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 17:43:06 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba4b04c279a4470bbafd0dfa20fcf220",
+       "model_id": "c5b78709804648a2b6a5413865aa5ce1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +667,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e72e0a737d41fd94ce77f28a6e5839",
+       "model_id": "91e719a75005407882b7e7b7f34c999e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -693,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f444d57",
+   "id": "4ae1163f",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -702,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3c0fe61d",
+   "id": "f438f2ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +715,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -724,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3c1c640",
+   "id": "6d361a5e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -736,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:35:24 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:48:19 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -746,9 +751,9 @@
      "text": [
       "{'dataset_split_seed': 200,\n",
       " 'experiment_iteration': 'Exp_iter_2',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -756,7 +761,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cf31f9c159a4fb9bcca836f33af0a5b",
+       "model_id": "9ae3e8dfbf004e778d15cf44604ee5ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -768,12 +773,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:35:25 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:48:24 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:35:25 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:48:24 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -781,8 +793,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -809,14 +819,14 @@
       "             8994,  7972,  2554,  9884,  2008,  6884, 11995,  5200,  4649,\n",
       "            10244, 13775],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 200, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c3a08558e834178b1dba995a35d6055",
+       "model_id": "0c2772f222e24ea6af79a0069dde4716",
        "version_major": 2,
        "version_minor": 0
       },
@@ -830,7 +840,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edbc2493f8124072a5505706cdbbc5ee",
+       "model_id": "ecc1aa4fb4dc42afab5f0a0d94449115",
        "version_major": 2,
        "version_minor": 0
       },
@@ -861,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "542c6b3a",
+   "id": "c8303772",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -870,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "719493c6",
+   "id": "17ddd558",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +888,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -892,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "793aa467",
+   "id": "e4bb1354",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -919,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d73e2c21",
+   "id": "183168d1",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -928,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8f2cf62f",
+   "id": "63dbebf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +946,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -950,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "24d602fe",
+   "id": "46aeaf43",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -977,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b682a3a",
+   "id": "2192e97c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -986,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bd834f1a",
+   "id": "fdd8305e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1004,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1008,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "04eb57a3",
+   "id": "b64d54a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -1035,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29612eeb",
+   "id": "ce834462",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1044,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "08a7591e",
+   "id": "8820e4be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1062,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1066,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6a3b401",
+   "id": "be798c7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1094,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9166e819",
+   "id": "4c1ad407",
    "metadata": {},
    "outputs": [],
    "source": []
