--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c880c4c0",
+   "id": "3a215a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "49d0615f",
+   "id": "0308a30b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45bc8e29",
+   "id": "3699543f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d726f67e",
+   "id": "dee882b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a0d7f3a",
+   "id": "74ae770f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3fcb9b5e",
+   "id": "0e6a3f4c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c7b117",
+   "id": "3e14751e",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e670feb8",
+   "id": "ed8538b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1af9ab",
+   "id": "00e10c76",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c1171ad4",
+   "id": "01c6e5b7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_acs_pubcov'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da2cdbe",
+   "id": "5ca64a46",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2821ea3",
+   "id": "432a094d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a3358a7",
+   "id": "c527eed2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2d96c972",
+   "id": "a8c0c422",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  c36d3f62-2edd-4df4-97db-a9c3cb5be8ed\n"
+      "Current session uuid:  ac38ec40-c789-4f7e-91be-9ffb55bc3e6f\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed',\n",
+    "    'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16385eec",
+   "id": "df0c9240",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "899c9542",
+   "id": "2031ae99",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d44a6a04",
+   "id": "344835f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4118831f",
+   "id": "5b48d02e",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19babaa",
+   "id": "b924fd6d",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "de8b01df",
+   "id": "3aa9ac87",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8fa3c096",
+   "id": "94a586b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233cef60",
+   "id": "5121261c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:40:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -571,9 +571,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -581,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c20f7610cd864e8d82500e50df34c169",
+       "model_id": "13d455164f314e328d9b26d03b599e03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -593,10 +593,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:40:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -604,8 +611,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -632,8 +637,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:05:21: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:08:18: Tuning for MLPClassifier is finished [F1 score = 0.664408522621062, Accuracy = 0.7095111111111111]\n",
+      "2024/01/06, 17:40:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 17:43:06: Tuning for MLPClassifier is finished [F1 score = 0.6632309503633372, Accuracy = 0.7084444444444444]\n",
       "\n"
      ]
     },
@@ -641,14 +646,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:08:18 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 17:43:06 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba4b04c279a4470bbafd0dfa20fcf220",
+       "model_id": "c5b78709804648a2b6a5413865aa5ce1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +667,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e72e0a737d41fd94ce77f28a6e5839",
+       "model_id": "91e719a75005407882b7e7b7f34c999e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -693,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c61013fb",
+   "id": "d03a405a",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -702,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7e927511",
+   "id": "56adf73d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +715,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -724,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2a531a7c",
+   "id": "e03c9c12",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -751,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97b2a01e",
+   "id": "d27d1f2a",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -760,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f084ec91",
+   "id": "6d6e6a14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +773,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -782,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82a065e",
+   "id": "f00812fe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -794,7 +799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:35:41 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:48:50 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -804,9 +809,9 @@
      "text": [
       "{'dataset_split_seed': 300,\n",
       " 'experiment_iteration': 'Exp_iter_3',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 300,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -814,7 +819,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc2d6832234a4afcac723741807e66e7",
+       "model_id": "9586dfbba7334f1390806bb47ce20a7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -826,12 +831,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:35:42 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:48:54 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:35:42 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:48:54 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -839,8 +851,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -867,14 +877,14 @@
       "            12168,  6957,  9083, 14260,  5349,  7879,  3078, 10032, 13643,\n",
       "            12025,  7489],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 300, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3b18b63ca54a40a827305c6a02477b",
+       "model_id": "f763d7e8b91f47a1948c5a83aaedb52d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -888,7 +898,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38b836cabd8f436cab609d5440f0d3b1",
+       "model_id": "197162abbfa94af7b83485e5ef999f47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -919,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d612dc",
+   "id": "30b28be9",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -928,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fcb1f699",
+   "id": "30530c9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +946,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -950,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "beb8b21b",
+   "id": "d80a2c92",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -977,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb920cb",
+   "id": "d77897e0",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -986,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4e811bd7",
+   "id": "df1668b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1004,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1008,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aae173f4",
+   "id": "054750d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -1035,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbebb22d",
+   "id": "0239e62b",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1044,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "479877d7",
+   "id": "6bc6d236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1062,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1066,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cef7ac70",
+   "id": "82e05c6e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1094,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7a92a5",
+   "id": "5aa3437a",
    "metadata": {},
    "outputs": [],
    "source": []
