--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ff9a2db7",
+   "id": "5c0af0c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "44bfe37d",
+   "id": "fb27268a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cefff41e",
+   "id": "9094c498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5a11f83",
+   "id": "040d8b71",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb705c04",
+   "id": "85601d17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fa8bb340",
+   "id": "48e0651d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8acc896f",
+   "id": "345b2f8a",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba76f25c",
+   "id": "ae36bf7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c46bd8",
+   "id": "2a55e611",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "407b756f",
+   "id": "414813d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_law_school'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "603e0275",
+   "id": "c6a2072b",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a03e225b",
+   "id": "dba6d939",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c7ca1ff6",
+   "id": "197629de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "51e50d24",
+   "id": "bcf765f9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6\n"
+      "Current session uuid:  336e4621-fef9-4722-a3c1-b2ecca7e7f45\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
+    "    'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f8c3066e",
+   "id": "17bd13ba",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "883f4d07",
+   "id": "95a804f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "802df6c4",
+   "id": "2042867d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d90cff69",
+   "id": "a6aa50ed",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5401a6cf",
+   "id": "e933f251",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -460,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "242fd078",
+   "execution_count": 12,
+   "id": "72fe833a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -478,8 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e1478638",
+   "execution_count": 13,
+   "id": "a59e0dc6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e0b8f083",
+   "execution_count": 14,
+   "id": "9d429c81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -512,7 +512,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:07:25 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 16:38:00 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -522,9 +522,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "744bf3a165844953b4477c0a17801a8d",
+       "model_id": "a0ea48877a6d4deca899ce79c2f48908",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,10 +544,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:07:25 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 16:38:03 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -555,8 +562,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -571,15 +576,15 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:07:25: Tuning LGBMClassifier...\n",
+      "2024/01/06, 16:38:03: Tuning LGBMClassifier...\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "2024/01/06, 13:07:40: Tuning for LGBMClassifier is finished [F1 score = 0.6577745247304675, Accuracy = 0.9016541396027836]\n",
+      "2024/01/06, 16:38:18: Tuning for LGBMClassifier is finished [F1 score = 0.6601973026883856, Accuracy = 0.9003717924058373]\n",
       "\n",
-      "2024/01/06, 13:07:40: Tuning LogisticRegression...\n",
-      "2024/01/06, 13:07:42: Tuning for LogisticRegression is finished [F1 score = 0.6577325124821982, Accuracy = 0.9024232717337161]\n",
+      "2024/01/06, 16:38:18: Tuning LogisticRegression...\n",
+      "2024/01/06, 16:38:20: Tuning for LogisticRegression is finished [F1 score = 0.6536051960388006, Accuracy = 0.9021027712429905]\n",
       "\n",
-      "2024/01/06, 13:07:42: Tuning RandomForestClassifier...\n",
-      "2024/01/06, 13:10:06: Tuning for RandomForestClassifier is finished [F1 score = 0.6532782613510243, Accuracy = 0.8956917010667732]\n",
+      "2024/01/06, 16:38:20: Tuning RandomForestClassifier...\n",
+      "2024/01/06, 16:40:45: Tuning for RandomForestClassifier is finished [F1 score = 0.6541630326524567, Accuracy = 0.8975508973619187]\n",
       "\n"
      ]
     },
@@ -587,14 +592,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:10:07 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 16:40:45 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e873093699f495eb302a493919ca640",
+       "model_id": "8c8f00d67e904944b567c58351979cba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -608,7 +613,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cf2233141f64a42b13e3454b19cef93",
+       "model_id": "76d797355cb4440caabaa505cfd15910",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,7 +767,6 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     },
@@ -833,13 +837,14 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ef91e67c72d4cd6a69ec6cb5a7d9055",
+       "model_id": "2c68bdf2686245b8a1aa76a4f822b40c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -853,7 +858,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c07f1e89dc74f2aa78f7bfe869c2575",
+       "model_id": "d165b2161b94412096128b3c467fe9bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -884,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ba45b5",
+   "id": "dc876a4b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -893,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c706f287",
+   "id": "bcd0259d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +906,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181006.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214045.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -915,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "07985c26",
+   "id": "bf9b9ca6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -942,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c19b161",
+   "id": "25dafe12",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -951,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7930ffcc",
+   "id": "663a7eaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +964,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181006.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214045.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -973,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "87711e51",
+   "id": "39717477",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -1000,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f0eb02",
+   "id": "9c5499e9",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1009,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "52bd63a8",
+   "id": "5e78a60b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1022,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181006.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214045.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1031,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f93ce4bb",
+   "id": "87bbbb74",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -1058,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2523e1c",
+   "id": "d1f96c80",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1067,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c202282e",
+   "id": "d1e1ff77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1080,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181006.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214045.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1089,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea75be00",
+   "id": "3b62d86c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -1116,7 +1121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a35c1ba",
+   "id": "977e7e5e",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1125,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5cd1f2c4",
+   "id": "70050088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1138,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181006.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214045.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1147,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c1721907",
+   "id": "e8d47024",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1175,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18cbb2a5",
+   "id": "ba3aca15",
    "metadata": {},
    "outputs": [],
    "source": []
