--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2-Copy1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "39a8a820",
+   "id": "52262e10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "09efbb85",
+   "id": "befa8cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc2ce0af",
+   "id": "9c2111c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e67d2a56",
+   "id": "452a0d94",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7ba0c7f3",
+   "id": "9d0766ab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2eefc7ed",
+   "id": "69243a16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4a0b205",
+   "id": "0266d468",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c322b459",
+   "id": "dd9cd12e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c672264c",
+   "id": "f500b3f8",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "950ae014",
+   "id": "1c1047e4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_law_school'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "869d1dd4",
+   "id": "b8d91ff4",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "da84c5fb",
+   "id": "2fbd1f4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7256ac20",
+   "id": "76f45691",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed703cf2",
+   "id": "f5e30b80",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6\n"
+      "Current session uuid:  336e4621-fef9-4722-a3c1-b2ecca7e7f45\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
+    "    'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33a1c6ed",
+   "id": "87849831",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a15e3a50",
+   "id": "1bacec3f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "33141ca6",
+   "id": "067899fc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f99ba1",
+   "id": "43058096",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48e0e9e5",
+   "id": "86f86d91",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -460,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f7e51f2f",
+   "execution_count": 11,
+   "id": "79d33210",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -478,8 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c2586186",
+   "execution_count": 12,
+   "id": "83a0b8c6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "79f58158",
+   "execution_count": null,
+   "id": "7e04acda",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -512,7 +512,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 16:41:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -522,9 +522,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e4c74a4a1b24cd586660fdae4c00faf",
+       "model_id": "44831ab68cfb4a63bf7bb2d82e92a202",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,10 +544,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 16:41:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -555,8 +562,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -571,8 +576,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:09:42: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:11:24: Tuning for MLPClassifier is finished [F1 score = 0.6558087427796351, Accuracy = 0.9009488387806334]\n",
+      "2024/01/06, 16:41:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 16:43:04: Tuning for MLPClassifier is finished [F1 score = 0.6558929553045519, Accuracy = 0.9016540409644852]\n",
       "\n"
      ]
     },
@@ -580,14 +585,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:11:24 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 16:43:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d919ee18120467183225712297df106",
+       "model_id": "f5b5007f2f5d4484bff3921c959598bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7caaa1049a1d427a8ff0d7f6f1b642b4",
+       "model_id": "38c897002c6941c291f78ab8602a4fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c093a301",
+   "id": "2d1855dd",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -641,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "80af32e1",
+   "id": "00373cc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +654,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -663,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2f0663fb",
+   "id": "3aa7734f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -675,7 +680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:46:18 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:00:32 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -685,9 +690,9 @@
      "text": [
       "{'dataset_split_seed': 200,\n",
       " 'experiment_iteration': 'Exp_iter_2',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -695,7 +700,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47483cbab7904c648943fcf2b2f4e7ee",
+       "model_id": "3fd467391ba74c589cc8751b1dcf1fb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -707,12 +712,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:46:18 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:00:35 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:46:18 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:00:35 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -720,8 +732,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -736,14 +746,14 @@
       "            14769, 11087, 10125, 19318, 10215, 10253,  7587,  2716,   577,\n",
       "             2257,  1011],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_law_school/tuning_results_Law_School_alpha_0.0_20240106__181124.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_law_school/tuning_results_Law_School_alpha_0.6_20240106__214304.csv\n",
       "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 200, 'shuffle': True, 'solver': 'adam', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcac795d3e704e0e808afddfb3a63566",
+       "model_id": "a9b1445dbbe846b9b0fbbd4fb820154f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -757,7 +767,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba68337157f44ed0913767bdb7f67548",
+       "model_id": "2cf1410d039446b8a287e64342963226",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf7252ac",
+   "id": "5c1f7324",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -797,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a1b3dce6",
+   "id": "16415e8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +815,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -819,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f12f66c",
+   "id": "2902d122",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -846,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9f9666",
+   "id": "c98117dc",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -855,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "94d775b8",
+   "id": "ab480563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +873,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -877,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "316b8936",
+   "id": "78d43db2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -904,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0720b95",
+   "id": "c51a30b2",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -913,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e6dc24a6",
+   "id": "453c67b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +931,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -935,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d46a130",
+   "id": "32bbb4e7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -962,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f647dc30",
+   "id": "98c96c84",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -971,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4e53c860",
+   "id": "7e793afd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +989,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -993,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fdee502a",
+   "id": "38565e81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1021,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "074f6c02",
+   "id": "b497fcbf",
    "metadata": {},
    "outputs": [],
    "source": []
