--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2-Copy3.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2-Copy3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e20443b2",
+   "id": "6b0e7a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eb0af254",
+   "id": "814bf167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b5b4fb3",
+   "id": "b2eb3a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f865af6",
+   "id": "e7b3db1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c8890afa",
+   "id": "096d8638",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1bc9e588",
+   "id": "143107fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f1054e8",
+   "id": "0cd34a96",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df3bcab1",
+   "id": "b7e4396b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f67ea10",
+   "id": "80c1584f",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0983de28",
+   "id": "c06cf5d5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_law_school'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc73f86",
+   "id": "36624299",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "94148ac4",
+   "id": "3dce8e0b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5147b675",
+   "id": "a5eef2c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9fdfd4f8",
+   "id": "178da908",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6\n"
+      "Current session uuid:  336e4621-fef9-4722-a3c1-b2ecca7e7f45\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
+    "    'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4a637451",
+   "id": "a70496ed",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7fe47bab",
+   "id": "ba681c18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5c36e79c",
+   "id": "d8098478",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0a86c8",
+   "id": "c549330f",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8b7d1e",
+   "id": "e2b10556",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -460,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2f4b4a98",
+   "execution_count": 11,
+   "id": "8a80490b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -478,8 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "48b7a782",
+   "execution_count": 12,
+   "id": "ddc84918",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ed7a5bb4",
+   "execution_count": null,
+   "id": "14bcb6ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -512,7 +512,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 16:41:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -522,9 +522,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e4c74a4a1b24cd586660fdae4c00faf",
+       "model_id": "44831ab68cfb4a63bf7bb2d82e92a202",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,10 +544,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 16:41:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -555,8 +562,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -571,8 +576,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:09:42: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:11:24: Tuning for MLPClassifier is finished [F1 score = 0.6558087427796351, Accuracy = 0.9009488387806334]\n",
+      "2024/01/06, 16:41:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 16:43:04: Tuning for MLPClassifier is finished [F1 score = 0.6558929553045519, Accuracy = 0.9016540409644852]\n",
       "\n"
      ]
     },
@@ -580,14 +585,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:11:24 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 16:43:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d919ee18120467183225712297df106",
+       "model_id": "f5b5007f2f5d4484bff3921c959598bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7caaa1049a1d427a8ff0d7f6f1b642b4",
+       "model_id": "38c897002c6941c291f78ab8602a4fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "063806bf",
+   "id": "d142278d",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -641,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "514f3401",
+   "id": "266420b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +654,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -663,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4f13a82",
+   "id": "9874bd5a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -690,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81fb2b6b",
+   "id": "adcf5eba",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -699,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "db77f25c",
+   "id": "e6337867",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +712,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -721,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "023a3734",
+   "id": "186a0a49",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -748,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f329c3",
+   "id": "707c2a75",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -757,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "df42645d",
+   "id": "e2640a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +770,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -779,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d389c8c1",
+   "id": "6fb39135",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -791,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:47:08 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:01:10 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -801,9 +806,9 @@
      "text": [
       "{'dataset_split_seed': 400,\n",
       " 'experiment_iteration': 'Exp_iter_4',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 400,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -811,7 +816,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9776c7587c7847908d241d0d9e8f0346",
+       "model_id": "faf46758125f4b799f6ca3f28013c71d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -823,12 +828,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:47:08 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:01:12 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:47:08 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:01:12 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -836,8 +848,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -852,14 +862,14 @@
       "            18018,   684, 12169,   822,  4052,  5211,  8436,   126,  9549,\n",
       "            13980,   403],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_law_school/tuning_results_Law_School_alpha_0.0_20240106__181124.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_law_school/tuning_results_Law_School_alpha_0.6_20240106__214304.csv\n",
       "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 400, 'shuffle': True, 'solver': 'adam', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f48daf7f8b5c4c5cb3e5fe36beda9554",
+       "model_id": "d7012384bb2f45879abc0cc4a358f708",
        "version_major": 2,
        "version_minor": 0
       },
@@ -873,7 +883,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91864fa83ec44794a3fa24ac9c5c42f8",
+       "model_id": "81dd4ac3c0bf462aa587d4dff5cbf489",
        "version_major": 2,
        "version_minor": 0
       },
@@ -904,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae761ef5",
+   "id": "08a51afb",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -913,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b2f9125d",
+   "id": "617a6cfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +931,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -935,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fe306ed",
+   "id": "a67ddbcb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -962,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67c5d35",
+   "id": "e9735bd5",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -971,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "52c1575d",
+   "id": "def30477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +989,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -993,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbc01e5c",
+   "id": "6636c782",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1021,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1427172",
+   "id": "b8c93ecd",
    "metadata": {},
    "outputs": [],
    "source": []
