--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_income/ACS_Income_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_income/ACS_Income_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "28cde280",
+   "id": "d78aeb7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "77c7a6e7",
+   "id": "d706f602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "77354907",
+   "id": "e89a5669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "38e5d977",
+   "execution_count": 1,
+   "id": "128eed2c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a56225bc",
+   "execution_count": 2,
+   "id": "6ed040a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e53a7b1f",
+   "execution_count": 3,
+   "id": "435ed8bd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c564b700",
+   "id": "9d51bca1",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d31bd403",
+   "execution_count": 4,
+   "id": "9714b452",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7febef1",
+   "id": "cc384354",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -156,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "796e5104",
+   "execution_count": 5,
+   "id": "4e66ac44",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_acs_income'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954e6710",
+   "id": "0db425af",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c086c942",
+   "execution_count": 6,
+   "id": "6bf5b49a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -203,7 +203,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "269099b7",
+   "execution_count": 7,
+   "id": "5e42af71",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a4fb9b6c",
+   "execution_count": 9,
+   "id": "06e3ba9d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  ac796b56-9c83-474a-8e7a-2d95ee5efa7e\n"
+      "Current session uuid:  f009c98f-b732-44cf-9084-4bf12c11bdcf\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'ac796b56-9c83-474a-8e7a-2d95ee5efa7e',\n",
+    "    'session_uuid': 'f009c98f-b732-44cf-9084-4bf12c11bdcf',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de653e9f",
+   "id": "2f77d238",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -272,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6dfc232e",
+   "execution_count": 10,
+   "id": "69534170",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -393,7 +393,7 @@
        "4   14   1   1  8300   20    1   2     2    33  20.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "7ad18ef9",
+   "execution_count": 11,
+   "id": "ba126e4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -421,7 +421,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f3b117",
+   "id": "2f454a0b",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3597d270",
+   "id": "2a957b86",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -448,8 +448,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1cbb9b85",
+   "execution_count": 12,
+   "id": "12438df8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -466,8 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e05c3e67",
+   "execution_count": 13,
+   "id": "dc6e1377",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -487,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6401f8ef",
+   "execution_count": 14,
+   "id": "1783feb5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -500,7 +500,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 12:37:57 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 16:53:03 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -510,9 +510,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'ac796b56-9c83-474a-8e7a-2d95ee5efa7e'}\n",
+      " 'session_uuid': 'f009c98f-b732-44cf-9084-4bf12c11bdcf'}\n",
       "\n",
       "\n"
      ]
@@ -520,7 +520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da63d2459cb745f78d638c11eeac9ccb",
+       "model_id": "7aa49a793adc4d0face571e18373ecdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -532,10 +532,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.7\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 12:37:57 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 16:54:10 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -543,8 +550,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18',\n",
@@ -561,15 +566,15 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 12:37:57: Tuning LGBMClassifier...\n",
+      "2024/01/06, 16:54:10: Tuning LGBMClassifier...\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "2024/01/06, 12:38:19: Tuning for LGBMClassifier is finished [F1 score = 0.7707260767819267, Accuracy = 0.7968888888888888]\n",
+      "2024/01/06, 16:54:33: Tuning for LGBMClassifier is finished [F1 score = 0.7621430898465302, Accuracy = 0.7897777777777778]\n",
       "\n",
-      "2024/01/06, 12:38:19: Tuning LogisticRegression...\n",
-      "2024/01/06, 12:38:54: Tuning for LogisticRegression is finished [F1 score = 0.7791608697565473, Accuracy = 0.8030222222222223]\n",
+      "2024/01/06, 16:54:33: Tuning LogisticRegression...\n",
+      "2024/01/06, 16:54:47: Tuning for LogisticRegression is finished [F1 score = 0.7756932828028159, Accuracy = 0.7996444444444445]\n",
       "\n",
-      "2024/01/06, 12:38:54: Tuning RandomForestClassifier...\n",
-      "2024/01/06, 12:45:18: Tuning for RandomForestClassifier is finished [F1 score = 0.7752332962802204, Accuracy = 0.8035555555555556]\n",
+      "2024/01/06, 16:54:47: Tuning RandomForestClassifier...\n",
+      "2024/01/06, 17:02:40: Tuning for RandomForestClassifier is finished [F1 score = 0.7740167613750352, Accuracy = 0.8016888888888888]\n",
       "\n"
      ]
     },
@@ -577,14 +582,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 12:45:18 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 17:02:40 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17b45ecb632b4e8ba667e571ab939b18",
+       "model_id": "cb6e6d78746642c0b9d456d44b4754cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,7 +603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ae7227a430d430b8d75a78a8e3976ed",
+       "model_id": "162e7aff1d384122ae1716f11dfab41c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -752,7 +757,6 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     },
@@ -823,13 +827,14 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81545e142098496099ea31a09425ece1",
+       "model_id": "38eedc8de11a46e5a4928b745aa98c36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -843,7 +848,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a18584752f47471bacc571608e7afb0f",
+       "model_id": "0ff8c1ed831d419dbcd582f44a1678d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -874,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2099fea7",
+   "id": "302369cc",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -883,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3ce72f54",
+   "id": "e8a5b441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +896,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20240106__174518.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.7_20240106__220240.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -905,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9db1e398",
+   "id": "c780e803",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -932,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d70809",
+   "id": "78897f51",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -941,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b798972b",
+   "id": "6516a68e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +954,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20240106__174518.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.7_20240106__220240.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -963,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "49d7b561",
+   "id": "7ab04171",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -990,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0601c21b",
+   "id": "e229123d",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -999,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "12dd55ed",
+   "id": "d65487cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1012,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20240106__174518.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.7_20240106__220240.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1021,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a28416c9",
+   "id": "a437f806",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -1048,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee995d02",
+   "id": "5ece7d3c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1057,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "dd32a41c",
+   "id": "2b355f19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1070,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20240106__174518.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.7_20240106__220240.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1079,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ba18d913",
+   "id": "5ccedf69",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -1106,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f4e8c61",
+   "id": "78503d81",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1115,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "de7cafaf",
+   "id": "70aa9c3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1128,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.0_20240106__174518.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_alpha_0.7_20240106__220240.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1137,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "17e0099e",
+   "id": "680806fa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1165,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b45aa88",
+   "id": "d0c842dd",
    "metadata": {},
    "outputs": [],
    "source": []
