--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cef6f089",
+   "id": "f893d1ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a579f04",
+   "id": "0a3018a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3060fe1",
+   "id": "6c8344d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ca3cf902",
+   "id": "e07550df",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2fbed62d",
+   "id": "a277b3a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d422e484",
+   "id": "1d03b0e3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e56c704",
+   "id": "3fdc7c82",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e17d813f",
+   "id": "9695ec10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206621a1",
+   "id": "c85e64f8",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d335423f",
+   "id": "2851f9ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_acs_pubcov'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed66fa30",
+   "id": "5d287715",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "062d0514",
+   "id": "ac1ad6a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -218,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5865e07f",
+   "execution_count": 7,
+   "id": "ea9965be",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3d14e878",
+   "execution_count": 9,
+   "id": "78f7c2dd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  c36d3f62-2edd-4df4-97db-a9c3cb5be8ed\n"
+      "Current session uuid:  ac38ec40-c789-4f7e-91be-9ffb55bc3e6f\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed',\n",
+    "    'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "169f7981",
+   "id": "400cedfd",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -272,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f61877c9",
+   "execution_count": 10,
+   "id": "146178da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -454,7 +454,7 @@
        "4     6    54     0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "97553865",
+   "execution_count": 11,
+   "id": "2c055b07",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -482,7 +482,7 @@
        "(15000, 19)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82333c49",
+   "id": "30b059f7",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ee8f4c",
+   "id": "d318ba53",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -509,8 +509,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "dc365461",
+   "execution_count": 12,
+   "id": "d9277e34",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -527,8 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e88da4bc",
+   "execution_count": 13,
+   "id": "ded86c91",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -548,8 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "dd019017",
+   "execution_count": 14,
+   "id": "c5a98cbb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:03:48 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:36:27 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -571,9 +571,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -581,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9d8e8eea02a4d5f906048d8bff69cfe",
+       "model_id": "6c17fdb67b644b6c8bb82bd592238a97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -593,10 +593,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:03:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:36:31 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -604,8 +611,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -632,15 +637,15 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:03:48: Tuning LGBMClassifier...\n",
+      "2024/01/06, 17:36:31: Tuning LGBMClassifier...\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "2024/01/06, 13:04:02: Tuning for LGBMClassifier is finished [F1 score = 0.6655633155876245, Accuracy = 0.7078222222222222]\n",
+      "2024/01/06, 17:36:45: Tuning for LGBMClassifier is finished [F1 score = 0.6654151846807325, Accuracy = 0.7076444444444444]\n",
       "\n",
-      "2024/01/06, 13:04:02: Tuning LogisticRegression...\n",
-      "2024/01/06, 13:04:04: Tuning for LogisticRegression is finished [F1 score = 0.6466189786662032, Accuracy = 0.7007111111111111]\n",
+      "2024/01/06, 17:36:45: Tuning LogisticRegression...\n",
+      "2024/01/06, 17:36:47: Tuning for LogisticRegression is finished [F1 score = 0.6466216422968507, Accuracy = 0.7007111111111111]\n",
       "\n",
-      "2024/01/06, 13:04:04: Tuning RandomForestClassifier...\n",
-      "2024/01/06, 13:06:15: Tuning for RandomForestClassifier is finished [F1 score = 0.6575487526874578, Accuracy = 0.7017777777777777]\n",
+      "2024/01/06, 17:36:47: Tuning RandomForestClassifier...\n",
+      "2024/01/06, 17:38:52: Tuning for RandomForestClassifier is finished [F1 score = 0.6579816348108695, Accuracy = 0.7019555555555557]\n",
       "\n"
      ]
     },
@@ -648,14 +653,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:06:15 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 17:38:52 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24f01d1725914346954ea5be0d5b500d",
+       "model_id": "77a20882229344f19cbbab85cab6dd2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,7 +674,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f631f92fb5cb44bfad3092eac91b4cf1",
+       "model_id": "928109019c5845b2af54bb95c1de659c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,7 +905,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcc6b2ab7c224f9abc8b67ee514f8f40",
+       "model_id": "4dfd2b5476614965b329c50866536b4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -914,7 +919,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "931c9a99571d4c5fa782b72db7ffae78",
+       "model_id": "df6b9d3e811a49bfac339331c1c9b8f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -945,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c154be5",
+   "id": "dc9a91e1",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -954,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e0c9f87b",
+   "id": "d99a3873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +967,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180615.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__223852.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -976,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "424a2f6e",
+   "id": "bf2aac5e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -1003,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af59755a",
+   "id": "8fd92c5a",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1012,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a80e9d89",
+   "id": "9eac5b91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1025,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180615.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__223852.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1034,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "367f0782",
+   "id": "9c7a11d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -1061,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6508ea7",
+   "id": "3736c05b",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1070,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4d2948dc",
+   "id": "e4aa75ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1083,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180615.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__223852.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1092,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "23dc622a",
+   "id": "3a0e7327",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -1119,7 +1124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5567039f",
+   "id": "4ea37c8c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1128,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1c917412",
+   "id": "0ead1e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1141,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180615.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__223852.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1150,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fd16af5b",
+   "id": "5efea70e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -1177,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "356e7a8a",
+   "id": "0949cf89",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1186,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ac9fa01f",
+   "id": "5ae0241d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1199,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180615.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__223852.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1208,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "11a0b843",
+   "id": "9382dbca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1236,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05b4f58c",
+   "id": "0b0f592d",
    "metadata": {},
    "outputs": [],
    "source": []
