--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy3.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bc142ded",
+   "id": "fd7c7266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1ce3780",
+   "id": "e505c519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "63accf19",
+   "id": "ba151613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "28a685bc",
+   "id": "43fa9d67",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bc6c312",
+   "id": "32dacbd4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eca3e3cf",
+   "id": "1a84b4fd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff30775b",
+   "id": "58833f75",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5591e9f4",
+   "id": "5fae7717",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d2b6e4",
+   "id": "314ee3f9",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7eb80007",
+   "id": "c349ef3c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_acs_pubcov'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f45595d",
+   "id": "0f42d821",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a69e705",
+   "id": "e5d80260",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "60035374",
+   "id": "a8173055",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6bbb399c",
+   "id": "f8e51ccf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  c36d3f62-2edd-4df4-97db-a9c3cb5be8ed\n"
+      "Current session uuid:  ac38ec40-c789-4f7e-91be-9ffb55bc3e6f\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed',\n",
+    "    'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebe9e83e",
+   "id": "21968c10",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2752ca37",
+   "id": "1cc33a53",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9a177aa0",
+   "id": "2f41c95d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ff2bf2",
+   "id": "40eb616f",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf74dcd",
+   "id": "56183304",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "41f2464f",
+   "id": "c81388db",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ce10cf68",
+   "id": "0b9f9480",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df98938f",
+   "id": "f10a048d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:40:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -571,9 +571,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -581,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c20f7610cd864e8d82500e50df34c169",
+       "model_id": "13d455164f314e328d9b26d03b599e03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -593,10 +593,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:40:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -604,8 +611,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -632,8 +637,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:05:21: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:08:18: Tuning for MLPClassifier is finished [F1 score = 0.664408522621062, Accuracy = 0.7095111111111111]\n",
+      "2024/01/06, 17:40:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 17:43:06: Tuning for MLPClassifier is finished [F1 score = 0.6632309503633372, Accuracy = 0.7084444444444444]\n",
       "\n"
      ]
     },
@@ -641,14 +646,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:08:18 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 17:43:06 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba4b04c279a4470bbafd0dfa20fcf220",
+       "model_id": "c5b78709804648a2b6a5413865aa5ce1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +667,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e72e0a737d41fd94ce77f28a6e5839",
+       "model_id": "91e719a75005407882b7e7b7f34c999e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -693,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dac4afe",
+   "id": "98eef7b8",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -702,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a3b0a3d5",
+   "id": "b3a40859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +715,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -724,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "95d6d473",
+   "id": "b84c89aa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -751,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82980dd0",
+   "id": "84662463",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -760,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1d5ff9e6",
+   "id": "c3044186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +773,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -782,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf1e9cfe",
+   "id": "ef99b6ba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -809,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01cc5c6c",
+   "id": "3cb8feb0",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -818,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a4dddd81",
+   "id": "a085b550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +831,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -840,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c107bcf6",
+   "id": "fdc64faa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -852,7 +857,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:35:59 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:49:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -862,9 +867,9 @@
      "text": [
       "{'dataset_split_seed': 400,\n",
       " 'experiment_iteration': 'Exp_iter_4',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 400,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -872,7 +877,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8a7910313c0415494fab2fb4ca27fa3",
+       "model_id": "bc911d17e920494daaa972bd217e5ed1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -884,12 +889,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:36:00 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:49:14 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:36:00 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:49:14 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -897,8 +909,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -925,14 +935,14 @@
       "            14802,  8634, 10336,  1486, 14287,  8890,  5961, 10137, 14550,\n",
       "            14981, 11017],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 400, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7895e9d8fab4a968cfb94242f93eef7",
+       "model_id": "53e140d6f66c4e43b3f6497fcc825cd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -946,7 +956,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a76c88034ba499d96435d979f070626",
+       "model_id": "19eddba334474286b4e8a2f5d9ef440f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -977,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96926c4a",
+   "id": "0e2468f6",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -986,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1fc6be52",
+   "id": "1086595d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1004,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1008,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f62e358b",
+   "id": "da9923e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -1035,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4a0e56",
+   "id": "97f2e2aa",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1044,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b6cd4ed9",
+   "id": "36b8a0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1062,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1066,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c24a0e09",
+   "id": "de10b21e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1094,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cfedc67",
+   "id": "a27569fd",
    "metadata": {},
    "outputs": [],
    "source": []
