--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy5.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/ACS_PubCov_Batch2-Copy5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b5a7dda5",
+   "id": "9f317145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "486f186c",
+   "id": "084ee12e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "112b68f7",
+   "id": "31af9274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95404471",
+   "id": "cef7913a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "edef3afb",
+   "id": "62831845",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b68664f6",
+   "id": "c9eec41d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585bd8cf",
+   "id": "2a56981c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67a0b842",
+   "id": "17aa3bfc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b89030",
+   "id": "012a6804",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "39314f71",
+   "id": "be881a1a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_acs_pubcov'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d20a7c50",
+   "id": "06dbfb47",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "25ef3319",
+   "id": "d0391866",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c9ebbfc",
+   "id": "28189c8a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4d6c4be2",
+   "id": "c79e7c1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  c36d3f62-2edd-4df4-97db-a9c3cb5be8ed\n"
+      "Current session uuid:  ac38ec40-c789-4f7e-91be-9ffb55bc3e6f\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed',\n",
+    "    'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15ea1bfb",
+   "id": "92d83362",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4b51e511",
+   "id": "dc3ce0ff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "946c2a33",
+   "id": "dac456a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec61b5bb",
+   "id": "edce505c",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82258882",
+   "id": "2af857d5",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d5138f11",
+   "id": "b21aa829",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cfaf3a0f",
+   "id": "0ad9801c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec9e687",
+   "id": "448467ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:40:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -571,9 +571,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -581,7 +581,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c20f7610cd864e8d82500e50df34c169",
+       "model_id": "13d455164f314e328d9b26d03b599e03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -593,10 +593,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:05:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:40:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -604,8 +611,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -632,8 +637,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:05:21: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:08:18: Tuning for MLPClassifier is finished [F1 score = 0.664408522621062, Accuracy = 0.7095111111111111]\n",
+      "2024/01/06, 17:40:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 17:43:06: Tuning for MLPClassifier is finished [F1 score = 0.6632309503633372, Accuracy = 0.7084444444444444]\n",
       "\n"
      ]
     },
@@ -641,14 +646,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:08:18 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 17:43:06 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba4b04c279a4470bbafd0dfa20fcf220",
+       "model_id": "c5b78709804648a2b6a5413865aa5ce1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +667,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e72e0a737d41fd94ce77f28a6e5839",
+       "model_id": "91e719a75005407882b7e7b7f34c999e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -693,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8883990d",
+   "id": "1817a6b3",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -702,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "06af9ae6",
+   "id": "791a3143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +715,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -724,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "732bf440",
+   "id": "00b98c97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -751,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fbe881d",
+   "id": "d26191b2",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -760,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bed87ae5",
+   "id": "229279c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +773,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -782,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9e16aa8",
+   "id": "db7586af",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -809,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "045526ca",
+   "id": "d657bd14",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -818,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3c8cf885",
+   "id": "aa62dbf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +831,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -840,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b6d8ea5",
+   "id": "479e751e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -867,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abff186d",
+   "id": "5c7fee7d",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -876,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "84a45ac9",
+   "id": "de490f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +889,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -898,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5d6d6d46",
+   "id": "aca2c33f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -925,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b5a719",
+   "id": "76420799",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -934,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "33143f45",
+   "id": "e94fbd79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +947,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv'\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -956,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359740dc",
+   "id": "eb2cc44e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -968,7 +973,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:37:32 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:49:46 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -978,9 +983,9 @@
      "text": [
       "{'dataset_split_seed': 600,\n",
       " 'experiment_iteration': 'Exp_iter_6',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 600,\n",
-      " 'session_uuid': 'c36d3f62-2edd-4df4-97db-a9c3cb5be8ed'}\n",
+      " 'session_uuid': 'ac38ec40-c789-4f7e-91be-9ffb55bc3e6f'}\n",
       "\n",
       "\n"
      ]
@@ -988,7 +993,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d87d789821c4e3e9492dd0bcc705b51",
+       "model_id": "26321d70431b41539a3298fde4944126",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1000,12 +1005,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:37:32 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:49:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:37:32 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:49:49 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1013,8 +1025,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
       "       'cat__SCHL_17', 'cat__SCHL_18', 'cat__SCHL_19', 'cat__SCHL_2',\n",
@@ -1041,14 +1051,14 @@
       "             9794,  7142, 14347,  6387,  2917,   317,  9085,  5821, 11007,\n",
       "             8142,  3719],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.0_20240106__180818.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_alpha_0.6_20240106__224306.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 600, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "197cf509327742e3892fd193ce78fb23",
+       "model_id": "f96c6ef3a90240d3856a37d2df87a34f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1062,7 +1072,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ca71b560a604be2a2414363c2df9f00",
+       "model_id": "7e094b087dc94e4ba49f81389d8bda99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1094,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c92c748",
+   "id": "a5027b91",
    "metadata": {},
    "outputs": [],
    "source": []
