--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2-Copy2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "95f10d5f",
+   "id": "e9781d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "319a6cfb",
+   "id": "d4fe0231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "739f8198",
+   "id": "239cbba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2c98d54d",
+   "id": "ab479a30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b2adbec7",
+   "id": "69a77201",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "28d23f3d",
+   "id": "393f0a5e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa4903ef",
+   "id": "8319924c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ac0de962",
+   "id": "b0bd486e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e34041c",
+   "id": "426caa3c",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94d7c88c",
+   "id": "7e4a8784",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_law_school'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7addfae9",
+   "id": "dd9d4513",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6adeff2b",
+   "id": "d6153b38",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08071cb2",
+   "id": "6b132f1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0a556975",
+   "id": "d4e1c822",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6\n"
+      "Current session uuid:  336e4621-fef9-4722-a3c1-b2ecca7e7f45\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
+    "    'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "35ad4db3",
+   "id": "b9b3c05f",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "68856983",
+   "id": "a7c8b309",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c908621a",
+   "id": "db4361ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaecd58a",
+   "id": "4321d7de",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26503649",
+   "id": "b19d947e",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -460,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3cea7019",
+   "execution_count": 11,
+   "id": "44e694f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -478,8 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "8f2f5ee3",
+   "execution_count": 12,
+   "id": "29bfda17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "29835dab",
+   "execution_count": null,
+   "id": "40162672",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -512,7 +512,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 16:41:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -522,9 +522,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e4c74a4a1b24cd586660fdae4c00faf",
+       "model_id": "44831ab68cfb4a63bf7bb2d82e92a202",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,10 +544,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 16:41:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -555,8 +562,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -571,8 +576,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:09:42: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:11:24: Tuning for MLPClassifier is finished [F1 score = 0.6558087427796351, Accuracy = 0.9009488387806334]\n",
+      "2024/01/06, 16:41:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 16:43:04: Tuning for MLPClassifier is finished [F1 score = 0.6558929553045519, Accuracy = 0.9016540409644852]\n",
       "\n"
      ]
     },
@@ -580,14 +585,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:11:24 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 16:43:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d919ee18120467183225712297df106",
+       "model_id": "f5b5007f2f5d4484bff3921c959598bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7caaa1049a1d427a8ff0d7f6f1b642b4",
+       "model_id": "38c897002c6941c291f78ab8602a4fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3f157b",
+   "id": "e655b366",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -641,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1db24e9b",
+   "id": "1c42ac4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +654,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -663,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b114256",
+   "id": "918d92e5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -690,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86ae4f2",
+   "id": "27ea9cf6",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -699,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6df65130",
+   "id": "6d377cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +712,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -721,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "74518f0e",
+   "id": "626585cb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -733,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:46:42 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 17:00:46 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -743,9 +748,9 @@
      "text": [
       "{'dataset_split_seed': 300,\n",
       " 'experiment_iteration': 'Exp_iter_3',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 300,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -753,7 +758,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99086552e5c449c6a26282831b295b62",
+       "model_id": "9cc582485dbc4b84bd9655055e498646",
        "version_major": 2,
        "version_minor": 0
       },
@@ -765,12 +770,19 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:46:43 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 17:00:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-06 13:46:43 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-06 17:00:48 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -778,8 +790,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -794,14 +804,14 @@
       "             5966, 12835,  9832,  4098,  6607, 11751,   861, 11502, 17873,\n",
       "            10882, 17470],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_law_school/tuning_results_Law_School_alpha_0.0_20240106__181124.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/DIR/DIR_law_school/tuning_results_Law_School_alpha_0.6_20240106__214304.csv\n",
       "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 300, 'shuffle': True, 'solver': 'adam', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db53a7ff66f946218dba1a5bbed98e02",
+       "model_id": "8e38e750ac2f445dafba7457339f80e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -815,7 +825,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8538281793c4ce5b08b9af8a6fa925e",
+       "model_id": "855373f2ae4440b6941d8ab9bb558e9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -846,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856a6302",
+   "id": "4e8bd60e",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -855,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "478b760f",
+   "id": "acdb94be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +873,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -877,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27c8b9eb",
+   "id": "9236d431",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -904,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9db849d",
+   "id": "4e485aa8",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -913,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2394d069",
+   "id": "53a7983d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +931,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -935,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b3f5f26a",
+   "id": "6d5d8f80",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -962,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f11e860",
+   "id": "21c932fc",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -971,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d461b9fb",
+   "id": "2bfe6986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +989,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -993,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c7d6f4e",
+   "id": "05c3a187",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -1021,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c395a1e5",
+   "id": "68f4557b",
    "metadata": {},
    "outputs": [],
    "source": []
