--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_law_school/Law_School_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "710b2f58",
+   "id": "87fdaf22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "482b888b",
+   "id": "f7c00356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d24989c9",
+   "id": "6b89b1e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79aaf866",
+   "id": "22e78483",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d23fd627",
+   "id": "769eff6e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6155181f",
+   "id": "6119837a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1307bf0",
+   "id": "bac8fad2",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "afa8d5b9",
+   "id": "b21a0d62",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96cdd8c8",
+   "id": "db24903d",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "053a93d1",
+   "id": "423a7fd5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -170,7 +170,7 @@
     "EXPERIMENT_NAME = 'DIR_law_school'\n",
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "FAIRNESS_INTERVENTION = 'DIR'\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.6]\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp', FAIRNESS_INTERVENTION, EXPERIMENT_NAME)\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', 'diff_fairness_interventions_exp',\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c01f7fb",
+   "id": "d2ae99d1",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e11b16ba",
+   "id": "46b8e9c9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3197e728",
+   "id": "3cb90118",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "756e99c8",
+   "execution_count": 8,
+   "id": "d2a4a15c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6\n"
+      "Current session uuid:  336e4621-fef9-4722-a3c1-b2ecca7e7f45\n"
      ]
     }
    ],
@@ -257,14 +257,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6',\n",
+    "    'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5889593a",
+   "id": "d3c2e8fa",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -272,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3739b246",
+   "execution_count": 9,
+   "id": "8eacb112",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -406,7 +406,7 @@
        "4  White  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,8 +418,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "54877707",
+   "execution_count": 10,
+   "id": "5b2211c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -433,7 +433,7 @@
        "(20798, 11)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472b7061",
+   "id": "414d2c59",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b8ce23",
+   "id": "f99c5e55",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -460,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "311d4b61",
+   "execution_count": 11,
+   "id": "a21ad05a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -478,8 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bc09ba71",
+   "execution_count": 12,
+   "id": "768c09fd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "99b7d688",
+   "execution_count": 13,
+   "id": "34d37d5e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -512,7 +512,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 16:41:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -522,9 +522,9 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.6]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b37c9c58-ed69-425c-b3d5-8f1ffd3adcd6'}\n",
+      " 'session_uuid': '336e4621-fef9-4722-a3c1-b2ecca7e7f45'}\n",
       "\n",
       "\n"
      ]
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e4c74a4a1b24cd586660fdae4c00faf",
+       "model_id": "44831ab68cfb4a63bf7bb2d82e92a202",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,10 +544,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intervention_param:  0.6\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:09:42 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 16:41:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -555,8 +562,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "Skip preprocessing\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__fulltime_1.0', 'cat__fulltime_2.0', 'cat__fam_inc_1.0',\n",
       "       'cat__fam_inc_2.0', 'cat__fam_inc_3.0', 'cat__fam_inc_4.0',\n",
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
@@ -571,8 +576,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 13:09:42: Tuning MLPClassifier...\n",
-      "2024/01/06, 13:11:24: Tuning for MLPClassifier is finished [F1 score = 0.6558087427796351, Accuracy = 0.9009488387806334]\n",
+      "2024/01/06, 16:41:16: Tuning MLPClassifier...\n",
+      "2024/01/06, 16:43:04: Tuning for MLPClassifier is finished [F1 score = 0.6558929553045519, Accuracy = 0.9016540409644852]\n",
       "\n"
      ]
     },
@@ -580,14 +585,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 13:11:24 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-06 16:43:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d919ee18120467183225712297df106",
+       "model_id": "f5b5007f2f5d4484bff3921c959598bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -601,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7caaa1049a1d427a8ff0d7f6f1b642b4",
+       "model_id": "38c897002c6941c291f78ab8602a4fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef61fab6",
+   "id": "3176f353",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -641,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a67b64b6",
+   "id": "7e3ca057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +654,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -663,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "19c30fc5",
+   "id": "ac61bed2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -690,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c43f246a",
+   "id": "ca9b4052",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -699,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "eee90e50",
+   "id": "2f62e9a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +712,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -721,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b848431c",
+   "id": "c6cd1411",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -748,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c3c6a7",
+   "id": "c9fadefb",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -757,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e98d8061",
+   "id": "4ecb2103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +770,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -779,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89ca0cc9",
+   "id": "4ce61b6a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -806,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a0e47a",
+   "id": "f2decf63",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -815,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e9b692dd",
+   "id": "8ba8e0ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +828,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -837,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d313e9f",
+   "id": "1297b2b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -864,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d40112",
+   "id": "ed970c9d",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -873,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e94ab6b2",
+   "id": "22932523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +886,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_alpha_0.0_20240106__181124.csv'\n",
+    "    'tuning_results_Law_School_alpha_0.6_20240106__214304.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -895,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7aca7ca1",
+   "id": "8c4d009d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -923,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ff8786",
+   "id": "40eaf2b7",
    "metadata": {},
    "outputs": [],
    "source": []
